3.1.0/_sources/gallery/lines_bars_and_markers/errorbar_limits_simple.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_lines_bars_and_markers_errorbar_limits_simple.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_lines_bars_and_markers_errorbar_limits_simple.py:


========================
Errorbar limit selection
========================

Illustration of selectively drawing lower and/or upper limit symbols on
errorbars using the parameters ``uplims``, ``lolims`` of `~.pyplot.errorbar`.

Alternatively, you can use 2xN values to draw errorbars in only one direction.

.. code-block:: default


    import numpy as np
    import matplotlib.pyplot as plt


    fig = plt.figure()
    x = np.arange(10)
    y = 2.5 * np.sin(x / 20 * np.pi)
    yerr = np.linspace(0.05, 0.2, 10)

    plt.errorbar(x, y + 3, yerr=yerr, label='both limits (default)')

    plt.errorbar(x, y + 2, yerr=yerr, uplims=True, label='uplims=True')

    plt.errorbar(x, y + 1, yerr=yerr, uplims=True, lolims=True,
                 label='uplims=True, lolims=True')

    upperlimits = [True, False] * 5
    lowerlimits = [False, True] * 5
    plt.errorbar(x, y, yerr=yerr, uplims=upperlimits, lolims=lowerlimits,
                 label='subsets of uplims and lolims')

    plt.legend(loc='lower right')





.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_errorbar_limits_simple_001.png
    :class: sphx-glr-single-img




Similarly ``xuplims``and ``xlolims`` can be used on the horizontal ``xerr``
errorbars.


.. code-block:: default


    fig = plt.figure()
    x = np.arange(10) / 10
    y = (x + 0.1)**2

    plt.errorbar(x, y, xerr=0.1, xlolims=True, label='xlolims=True')
    y = (x + 0.1)**3

    plt.errorbar(x + 0.6, y, xerr=0.1, xuplims=upperlimits, xlolims=lowerlimits,
                 label='subsets of xuplims and xlolims')

    y = (x + 0.1)**4
    plt.errorbar(x + 1.2, y, xerr=0.1, xuplims=True, label='xuplims=True')

    plt.legend()
    plt.show()




.. image:: /gallery/lines_bars_and_markers/images/sphx_glr_errorbar_limits_simple_002.png
    :class: sphx-glr-single-img




------------

References
""""""""""

The use of the following functions, methods, classes and modules is shown
in this example:


.. code-block:: default


    import matplotlib
    matplotlib.axes.Axes.errorbar
    matplotlib.pyplot.errorbar







.. _sphx_glr_download_gallery_lines_bars_and_markers_errorbar_limits_simple.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: errorbar_limits_simple.py <errorbar_limits_simple.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: errorbar_limits_simple.ipynb <errorbar_limits_simple.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
